--- a/deprecated/JDS_response.tex
+++ b/deprecated/JDS_response.tex
@@ -101,17 +101,18 @@ Also, any custom figure can be easily produced using this code.''
 
 \textit{Please ensure that your revised version follows our housestyle guides which are available on the site under 'Instructions to Authors'.  Please note that footnotes should appear as endnotes, after the text and before the references.   Pay particular attention to requirements for bibliographic details in references (e.g. include place of publication for books and mimeos, page span for articles and chapters in books).  In addition, please provide the issue number only if each issue of the journal begins on page 1.  In such cases it goes in parentheses:  Journal, 8(1), pp–pp.  Page numbers should always be provided.  Please refer to the following link:   https://www.tandf.co.uk//journals/authors/style/reference/tf\_APA6.pdf}~\\
 
-I have move the footnote as endnote as indicated. 
+I have move the footnote as endnote as indicated. %As I didn't succeed in changing the bibliographic style to APA-6 using a LaTeX command, I would need to do it by hand. 
+I hope it is fine with you if I wait for an acceptance decision to fix the references.
 ~\\ ~\\
 
 \textit{The revised documents need to be in editable format and as you have submitted your paper in pdf format that is not possible. Please either convert your paper to Word or upload all the source files.}~\\
 
-response
+The revised submission is in LaTeX format. I have uploaded the source files.
 ~\\ ~\\
 
 \textit{Please ensure that any Tables, Equations and Figures are submitted in editable format not in image format.}~\\
 
-response
+The Tables are in LaTeX format and the Figures in PDF format, not in image format.
 ~\\ ~\\
 
 
