--- a/paper/poverty.bib
+++ b/paper/poverty.bib
@@ -941,7 +941,7 @@
   url = {https://www.jstor.org/stable/resrep15864}
 }
 
-@article{sdsn_sdg_2019,
+@misc{sdsn_sdg_2019,
   title = {{{SDG Costing}} \& {{Financing}} for Low-Income Developing Countries},
   author = {SDSN, Sustainable Development Solutions Network},
   year = {2019},
