--- a/paper/poverty.bib
+++ b/paper/poverty.bib
@@ -348,17 +348,6 @@
 }
 
 @techreport{gradin_wiid_2021-1,
-  title = {{{WIID Companion}} ({{March}} 2021): Data Selection},
-  shorttitle = {{{WIID Companion}} ({{March}} 2021)},
-  author = {Grad{\'i}n, Carlos},
-  year = {2021},
-  month = mar,
-  institution = {UNU-WIDER},
-  doi = {10.35188/UNU-WIDER/WTN/2021-4},
-  url = {https://www.wider.unu.edu/node/238513}
-}
-
-@techreport{gradin_wiid_2021-2,
   title = {{{WIID Companion}} ({{March}} 2021): Integrated and Standardized Series},
   shorttitle = {{{WIID Companion}} ({{March}} 2021)},
   author = {Grad{\'i}n, Carlos},
@@ -367,6 +356,17 @@
   institution = {UNU-WIDER},
   doi = {10.35188/UNU-WIDER/WTN/2021-5},
   url = {https://www.wider.unu.edu/node/238515}
+}
+
+@techreport{gradin_wiid_2021-2,
+  title = {{{WIID Companion}} ({{March}} 2021): Data Selection},
+  shorttitle = {{{WIID Companion}} ({{March}} 2021)},
+  author = {Grad{\'i}n, Carlos},
+  year = {2021},
+  month = mar,
+  institution = {UNU-WIDER},
+  doi = {10.35188/UNU-WIDER/WTN/2021-4},
+  url = {https://www.wider.unu.edu/node/238513}
 }
 
 @article{hellebrandt_future_2015,
@@ -779,8 +779,9 @@
 
 @techreport{oecd_oda_2023,
   title = {{{ODA Levels}} in 2022},
-  author = {OECD, .},
+  author = {OECD},
   year = {2023},
+  institution = {OECD},
   url = {https://www.oecd.org/dac/financing-sustainable-development/development-finance-data/}
 }
 
@@ -796,12 +797,12 @@
 }
 
 @book{piketty_brief_2022,
-  title = {{A Brief History of Equality}},
+  title = {A {{Brief History}} of {{Equality}}},
   author = {Piketty, Thomas},
   translator = {Rendall, Steven},
   year = {2022},
-  month = apr,
-  publisher = {Belknap Press: An Imprint of Harvard University Press},
+  edition = {Harvard University Press},
+  publisher = {Belknap Press},
   address = {Cambridge, Massachusetts},
   isbn = {978-0-674-27355-9}
 }
@@ -975,6 +976,7 @@
   title = {The {{Sustainable Development Goals Report}}},
   author = {UN},
   year = {2022},
+  institution = {UN},
   url = {https://unstats.un.org/sdgs/report/2022/The-Sustainable-Development-Goals-Report-2022.pdf}
 }
 
