--- a/paper/._wordcount_selection.tex
+++ b/paper/._wordcount_selection.tex
@@ -1,2 +1,5 @@
-
-% \let\footnote=\endnote
+t_2023}
+% \cite{moatsos_global_2016} 
+%  \cite{allen_absolute_2017} 
+%  \cite{moatsos_global_2016} 
+%  \citealp{moatsos_global_
