--- a/paper/mde.tex
+++ b/paper/mde.tex
@@ -21,64 +21,64 @@
   citecolor=violet,   % color of links to bibliography
 }
 
-\usepackage{bm}
-\usepackage{indentfirst}
-\setcitestyle{aysep={}} 
-\usepackage{amsmath}
-\usepackage{tcolorbox}
-\usepackage{amssymb}
-\usepackage{eurosym}
-\usepackage{amsfonts}
-\usepackage{enumerate}
-\usepackage{babel}
-\usepackage{graphicx}
-\usepackage{caption}
-\usepackage{supertabular}
-\usepackage{tabularx}
-\usepackage{float}
-\usepackage{dsfont}
-\usepackage{fancyvrb}
-\usepackage{verbatim}
-\usepackage{enumitem}
-\usepackage{setspace}
-\usepackage{comment}
-\usepackage{subcaption}
-\usepackage{tikz}
-\usepackage{gensymb}
-\usepackage{textcomp}
-\usepackage{placeins} % Floats appear in their section (to use with \FloatBarrier or [section])
+% \usepackage{bm}
+% \usepackage{indentfirst}
+% \setcitestyle{aysep={}} 
+% \usepackage{amsmath}
+% \usepackage{tcolorbox}
+% \usepackage{amssymb}
+% \usepackage{eurosym}
+% \usepackage{amsfonts}
+% \usepackage{enumerate}
+% \usepackage{babel}
+% \usepackage{graphicx}
+% \usepackage{caption}
+% \usepackage{supertabular}
+% \usepackage{tabularx}
+% \usepackage{float}
+% \usepackage{dsfont}
+% \usepackage{fancyvrb}
+% \usepackage{verbatim}
+% \usepackage{enumitem}
+% \usepackage{setspace}
+% \usepackage{comment}
+% \usepackage{subcaption}
+% \usepackage{tikz}
+% \usepackage{gensymb}
+% \usepackage{textcomp}
+% \usepackage{placeins} % Floats appear in their section (to use with \FloatBarrier or [section])
 
-\usepackage{tabulary}
-\usepackage{tabularx}
-\usepackage{booktabs}
-\usepackage{fullpage}
-\usepackage{morefloats}
-\usepackage{makecell}
-\usepackage{lscape}
-\usepackage{pdflscape}
-\usepackage{longtable}
-\usepackage{rotating}
-\usepackage{fancyhdr}
+% \usepackage{tabulary}
+% \usepackage{tabularx}
+% \usepackage{booktabs}
+% \usepackage{fullpage}
+% \usepackage{morefloats}
+% \usepackage{makecell}
+% \usepackage{lscape}
+% \usepackage{pdflscape}
+% \usepackage{longtable}
+% \usepackage{rotating}
+% \usepackage{fancyhdr}
 % \usepackage{tocbibind} % Adds biblio to ToC 
-\usepackage{tocloft}
+% \usepackage{tocloft}
 % \usepackage{titletoc} % Adds title to ToC (use with tocloft?) 
-\usepackage[export]{adjustbox}
-\usepackage[anythingbreaks]{breakurl} % for links 
-\usepackage{multicol}
-% \usepackage{lineno}
-% \usepackage{endnotes}
-% \let\footnote=\endnote
-% \linenumbers
-\makeatletter
-\renewcommand\tableofcontents{% removes "Contents" from ToC
-    \@starttoc{toc}%
-}
-\makeatother
-\newsavebox\ltmcbox % For net gain table over two columns
-%\usepackage[nomarkers,figuresonly]{endfloat} % Figures at the end
-%\usepackage[section,below]{placeins} % Floats placed in the section they appear in.
-\renewcommand{\floatpagefraction}{.99}
-\newenvironment{stretchpars}{\par\setlength{\parfillskip}{0pt}}{\par} % to justify a line
+% \usepackage[export]{adjustbox}
+% \usepackage[anythingbreaks]{breakurl} % for links 
+% \usepackage{multicol}
+% % \usepackage{lineno}
+% % \usepackage{endnotes}
+% % \let\footnote=\endnote
+% % \linenumbers
+% \makeatletter
+% \renewcommand\tableofcontents{% removes "Contents" from ToC
+%     \@starttoc{toc}%
+% }
+% \makeatother
+% \newsavebox\ltmcbox % For net gain table over two columns
+% %\usepackage[nomarkers,figuresonly]{endfloat} % Figures at the end
+% %\usepackage[section,below]{placeins} % Floats placed in the section they appear in.
+% \renewcommand{\floatpagefraction}{.99}
+% \newenvironment{stretchpars}{\par\setlength{\parfillskip}{0pt}}{\par} % to justify a line
 
 \begin{document}
 
@@ -107,21 +107,21 @@ t \citep{angrist_why_2021}
  \cite{lakner_global_2013} 
  \cite{anand_chapter_2015},
 \citep{karver_mdgs_2012,hellebrandt_future_2015,bicaba_can_2017}
- (\cite{imf_world_2023} 
-\citep{woodward_redefining_2010,deaton_price_2010,deaton_purchasing_2011}
-\citep{sullivan_capitalist_2023}
-\cite{moatsos_global_2016} 
- \cite{allen_absolute_2017} 
- \cite{moatsos_global_2016} 
- \citealp{moatsos_global_2021}).
+%  (\cite{imf_world_2023} 
+% \citep{woodward_redefining_2010,deaton_price_2010,deaton_purchasing_2011}
+% \citep{sullivan_capitalist_2023}
+% \cite{moatsos_global_2016} 
+%  \cite{allen_absolute_2017} 
+%  \cite{moatsos_global_2016} 
+%  \citealp{moatsos_global_2021}).
 
-\citep{hickel_is_2019,kikstra_decent_2021}
- \citep{allen_absolute_2017}. 
-\citep{alstadsaeter_global_2024}.
+% \citep{hickel_is_2019,kikstra_decent_2021}
+%  \citep{allen_absolute_2017}. 
+% \citep{alstadsaeter_global_2024}.
  
-\citep{piketty_brief_2022}
-\citep{oecd_oda_2023}.
-\cite{un_sustainable_2022}
+% \citep{piketty_brief_2022}
+% \citep{oecd_oda_2023}.
+% \cite{un_sustainable_2022}
 
 
 % \renewcommand{\url}[1]{\href{#1}{Link}} 
