--- a/paper/._wordcount_selection.tex
+++ b/paper/._wordcount_selection.tex
@@ -1,5 +1,1 @@
-t_2023}
-% \cite{moatsos_global_2016} 
-%  \cite{allen_absolute_2017} 
-%  \cite{moatsos_global_2016} 
-%  \citealp{moatsos_global_
+allen_absolute_2017
