--- a/paper/mde.tex
+++ b/paper/mde.tex
@@ -107,21 +107,21 @@ t \citep{angrist_why_2021}
  \cite{lakner_global_2013} 
  \cite{anand_chapter_2015},
 \citep{karver_mdgs_2012,hellebrandt_future_2015,bicaba_can_2017}
-%  (\cite{imf_world_2023} 
-% \citep{woodward_redefining_2010,deaton_price_2010,deaton_purchasing_2011}
-% \citep{sullivan_capitalist_2023}
-% \cite{moatsos_global_2016} 
-%  \cite{allen_absolute_2017} 
-%  \cite{moatsos_global_2016} 
-%  \citealp{moatsos_global_2021}).
+ \cite{imf_world_2023} 
+\citep{woodward_redefining_2010,deaton_price_2010,deaton_purchasing_2011}
+\citep{sullivan_capitalist_2023}
+\cite{moatsos_global_2016} 
+ \cite{allen_absolute_2017} 
+ \cite{moatsos_global_2016} 
+ \citealp{moatsos_global_2021}
 
-% \citep{hickel_is_2019,kikstra_decent_2021}
-%  \citep{allen_absolute_2017}. 
-% \citep{alstadsaeter_global_2024}.
+\citep{hickel_is_2019,kikstra_decent_2021}
+ \citep{allen_absolute_2017}. 
+\citep{alstadsaeter_global_2024}.
  
-% \citep{piketty_brief_2022}
-% \citep{oecd_oda_2023}.
-% \cite{un_sustainable_2022}
+\citep{piketty_brief_2022}
+\citep{oecd_oda_2023}.
+\cite{un_sustainable_2022}
 
 
 % \renewcommand{\url}[1]{\href{#1}{Link}} 
