--- a/paper/poverty.bib
+++ b/paper/poverty.bib
@@ -1,9 +1,16 @@
 @article{allen_absolute_2017,
   title = {Absolute {{Poverty}}: {{When Necessity Displaces Desire}}},
+  shorttitle = {Absolute {{Poverty}}},
   author = {Allen, Robert C.},
   year = {2017},
-  url = {https://www.economics.ox.ac.uk/materials/papers/14420/141marchallen.pdf},
-  annotation = {00000}
+  month = dec,
+  journal = {American Economic Review},
+  volume = {107},
+  number = {12},
+  pages = {3690--3721},
+  issn = {0002-8282},
+  doi = {10.1257/aer.20161080},
+  url = {https://www.aeaweb.org/articles?id=10.1257/aer.20161080}
 }
 
 @techreport{alstadsaeter_global_2024,
