--- a/paper/poverty.tex
+++ b/paper/poverty.tex
@@ -79,10 +79,10 @@
 % \usepackage[round,sort&compress]{natbib} % NCCcomment
 \usepackage[natbibapa]{apacite}
 \bibliographystyle{apacite} 
-% \usepackage{url} % [hyphens]
-% \usepackage[hyperpageref]{backref} % back references biblio. Needs latexmk at compilation. Incompatible with apacite.
-\usepackage{hyperref}
-% \usepackage[pagebackref]{hyperref} % Incompatible with apacite.
+\usepackage{url} % [hyphens]
+\usepackage[hyperpageref]{backref} % back references biblio. Needs latexmk at compilation. Incompatible with apacite.
+% \usepackage{hyperref}
+\usepackage[pagebackref]{hyperref} % Incompatible with apacite.
 % \usepackage{hyperref}
 % \usepackage{multibib} % incompatible with backref
 \hypersetup{
